# agentic-assistant-framework

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.windmill  README.md  WINDMILL_DEPLOYMENT.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml  pytest.ini  streamlit_app.py  wmill.yaml
.cursor/commands/: speckit.plan.md  speckit.specify.md  speckit.tasks.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution-changelog.md  constitution.md  project-context.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py
docs/: constitution guide.md  phase 1 specs.md  roadmap.md  telemetry-refactoring.md
docs/adr/: 0001-memory-layer.md
f/research/: folder.meta.yaml  requirements.txt  run_research.py  run_research.script.yaml
mcp-servers/: websearch-wrapper.js
mcp-servers/time-context/: server.py
paias/: __init__.py
paias/agents/: researcher.py
paias/core/: __init__.py  config.py  llm.py  memory.py  risk_assessment.py  telemetry.py  tool_gap_detector.py
paias/mcp_integration/: setup.py
paias/models/: __init__.py  common.py  planned_action.py  research_report.py  research_state.py  session.py  tool_gap_report.py
paias/windmill/: daily_research.py
paias/workflows/: __init__.py  report_formatter.py  research_graph.py
scripts/: demo_us1_workflow.py  reset_dev_env.sh  run_pytest.sh  sync_windmill.sh  validate_quickstart.py
specs/001-core-memory-layer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-researcher-agent-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-daily-research-workflow/: data-model.md  langgraph-patterns-research.md  plan.md  quickstart.md  research.md  research_detailed.md  spec.md  tasks.md  windmill-approval-research.md
src/: __init__.py
src/agents/: researcher.py
src/api/: __init__.py  app.py
src/cli/: README.md  __init__.py  run_api.py  test_agent.py
src/core/: config.py  llm.py  memory.py  observability.py  risk_assessment.py  telemetry.py  tool_gap_detector.py
src/mcp_integration/: __init__.py  setup.py
src/models/: __init__.py  agent_response.py  approval_request.py  common.py  document.py  message.py  planned_action.py  research_report.py  research_state.py  risk_level.py  session.py  source_reference.py  tool_gap_report.py
src/windmill/: __init__.py  approval_handler.py  client.py  daily_research.py
src/workflows/: report_formatter.py  research_graph.py
tests/: __init__.py  conftest.py
tests/contract/: test_agent_api_contract.py  test_workflow_api_contract.py
tests/fixtures/: __init__.py  conftest.py  sample_documents.py  windmill_client.py
tests/integration/: test_daily_research_graph_e2e.py  (+12 more)
(+46 files in other folders)
